Finalized profile settings

--- a/templates/companies/edit_profile.html
+++ b/templates/companies/edit_profile.html
@@ -1,10 +1,12 @@
 {% extends '_base.html' %}
 {% load static %}
+{% load tailwind_filters %}
+{% load crispy_forms_tags %}
 
 {% block title %}Editing Profile{% endblock title %}
 
 {% block content %}
-    <form class="space-y-8 divide-y divide-gray-200">
+    <form class="space-y-8 divide-y divide-gray-200" action="{% url 'edit_profile' %}" method="POST" enctype="multipart/form-data">
         <div class="space-y-8 divide-y divide-gray-200 sm:space-y-5">
             <div class="space-y-6 pt-8 sm:space-y-5 sm:pt-10">
                 <div>
@@ -16,25 +18,20 @@
                         <label for="photo" class="block text-sm font-medium text-gray-700">Photo</label>
                         <div class="mt-1 sm:col-span-2 sm:mt-0">
                             <div class="flex items-center">
-              <span class="h-12 w-12 overflow-hidden rounded-full bg-gray-100">
-                <svg class="h-full w-full text-gray-300" fill="currentColor" viewBox="0 0 24 24">
-                  <path d="M24 20.993V24H0v-2.996A14.977 14.977 0 0112.004 15c4.904 0 9.26 2.354 11.996 5.993zM16.002 8.999a4 4 0 11-8 0 4 4 0 018 0z"/>
-                </svg>
-              </span>
-                                <button type="button" class="ml-5 rounded-md border border-gray-300 bg-white py-2 px-3 text-sm font-medium leading-4 text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Change</button>
+                                {{ form.profile_picture | as_crispy_field }}
                             </div>
                         </div>
                     </div>
                     <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
                         <label for="first-name" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">Title</label>
                         <div class="mt-1 sm:col-span-2 sm:mt-0">
-                            <input type="text" name="title" id="title" placeholder="CEO" class="block w-full max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:max-w-xs sm:text-sm" value="{{ form.title.value|default_if_none:"" }}">
+                            {{ form.title }}
                         </div>
                     </div>
                     <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
                         <label for="about" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">About</label>
                         <div class="mt-1 sm:col-span-2 sm:mt-0">
-                            <textarea id="about" name="about" rows="3" class="block w-full max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">{{ form.short_bio.value|default_if_none:"" }}</textarea>
+                            {{ form.short_bio }}
                             <p class="mt-2 text-sm text-gray-500">Write a few sentences about yourself.</p>
                         </div>
                     </div>
@@ -44,7 +41,7 @@
                         <div class="mt-1 sm:col-span-2 sm:mt-0">
                             <div class="flex max-w-lg rounded-md shadow-sm">
                                 <span class="inline-flex items-center rounded-l-md border border-r-0 border-gray-300 bg-gray-50 px-3 text-gray-500 sm:text-sm">linkedin.com/in/</span>
-                                <input type="text" name="linkedin" id="linkedin" class="block w-full min-w-0 flex-1 rounded-none rounded-r-md border-gray-300 focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" value="{{ form.linkedin_url.value|default_if_none:"" }}">
+                                {{ form.linkedin }}
                             </div>
                         </div>
                     </div>
@@ -54,7 +51,7 @@
                         <div class="mt-1 sm:col-span-2 sm:mt-0">
                             <div class="flex max-w-lg rounded-md shadow-sm">
                                 <span class="inline-flex items-center rounded-l-md border border-r-0 border-gray-300 bg-gray-50 px-3 text-gray-500 sm:text-sm">twitter.com/</span>
-                                <input type="text" name="twitter" id="twitter" class="block w-full min-w-0 flex-1 rounded-none rounded-r-md border-gray-300 focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" value="{{ form.twitter_url.value|default_if_none:"" }}">
+                                {{ form.twitter }}
                             </div>
                         </div>
                     </div>
@@ -64,7 +61,7 @@
                         <div class="mt-1 sm:col-span-2 sm:mt-0">
                             <div class="flex max-w-lg rounded-md shadow-sm">
                                 <span class="inline-flex items-center rounded-l-md border border-r-0 border-gray-300 bg-gray-50 px-3 text-gray-500 sm:text-sm">github.com/</span>
-                                <input type="text" name="github" id="github" class="block w-full min-w-0 flex-1 rounded-none rounded-r-md border-gray-300 focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" value="{{ form.github_url.value|default_if_none:"" }}">
+                                {{ form.github }}
                             </div>
                         </div>
                     </div>
@@ -72,11 +69,7 @@
                     <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
                         <label for="country" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">Office Location</label>
                         <div class="mt-1 sm:col-span-2 sm:mt-0">
-                            <select id="country" name="country" autocomplete="country-name" class="block w-full max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:max-w-xs sm:text-sm">
-                                <option>United States</option>
-                                <option>Canada</option>
-                                <option>Mexico</option>
-                            </select>
+                            {{ form.general_location }}
                             <p class="mt-2 text-sm text-gray-500">Select whichever office is closest to you</p>
                         </div>
                     </div>
@@ -84,32 +77,28 @@
                     <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
                         <label for="country" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">Team</label>
                         <div class="mt-1 sm:col-span-2 sm:mt-0">
-                            <select id="country" name="country" autocomplete="country-name" class="block w-full max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:max-w-xs sm:text-sm">
-                                <option>United States</option>
-                                <option>Canada</option>
-                                <option>Mexico</option>
-                            </select>
+                            {{ form.team }}
                         </div>
                     </div>
 
                     <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
                         <label for="first-name" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">First name</label>
                         <div class="mt-1 sm:col-span-2 sm:mt-0">
-                            <input type="text" name="first-name" id="first-name" autocomplete="given-name" class="block w-full max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:max-w-xs sm:text-sm" value="{{ form.first_name.value|default_if_none:"" }}">
+                            {{ form.first_name }}
                         </div>
                     </div>
 
                     <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
                         <label for="last-name" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">Last name</label>
                         <div class="mt-1 sm:col-span-2 sm:mt-0">
-                            <input type="text" name="last-name" id="last-name" autocomplete="family-name" class="block w-full max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:max-w-xs sm:text-sm" value="{{ form.last_name.value|default_if_none:"" }}">
+                            {{ form.last_name }}
                         </div>
                     </div>
 
                     <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
                         <label for="street-address" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">Street address</label>
                         <div class="mt-1 sm:col-span-2 sm:mt-0">
-                            <input type="text" name="street-address" id="street-address" autocomplete="street-address" class="block w-full max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" value="{{ form.address_1.value|default_if_none:"" }}">
+                            {{ form.address_1 }}
                             <p class="mt-2 text-sm text-gray-500">Address details will not be shared publicly, these are used to compute your companies midpoint location.</p>
                         </div>
                     </div>
@@ -117,30 +106,28 @@
                     <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
                         <label for="city" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">City</label>
                         <div class="mt-1 sm:col-span-2 sm:mt-0">
-                            <input type="text" name="city" id="city" autocomplete="address-level2" class="block w-full max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:max-w-xs sm:text-sm" value="{{ form.city.value|default_if_none:"" }}">
+                            {{ form.city }}
                         </div>
                     </div>
 
                     <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
                         <label for="region" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">State / Province</label>
                         <div class="mt-1 sm:col-span-2 sm:mt-0">
-                            <input type="text" name="prov_state" id="prov_state" autocomplete="address-level1" class="block w-full max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:max-w-xs sm:text-sm"
-                                   value="{{ form.prov_state.value|default_if_none:"" }}">
+                            {{ form.prov_state }}
                         </div>
                     </div>
 
                     <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
                         <label for="region" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">Country</label>
                         <div class="mt-1 sm:col-span-2 sm:mt-0">
-                            <input type="text" name="country" id="country" autocomplete="country" class="block w-full max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:max-w-xs sm:text-sm" value="{{ form.country.value|default_if_none:"" }}">
+                            {{ form.country }}
                         </div>
                     </div>
 
                     <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
                         <label for="postal-code" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">ZIP / Postal code</label>
                         <div class="mt-1 sm:col-span-2 sm:mt-0">
-                            <input type="text" name="postal-code" id="postal-code" autocomplete="postal-code" class="block w-full max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:max-w-xs sm:text-sm"
-                                   value="{{ form.postal_code.value|default_if_none:"" }}">
+                            {{ form.postal_code }}
                         </div>
                     </div>
                 </div>
@@ -149,47 +136,10 @@
 
         <div class="pt-5">
             <div class="flex justify-end">
-                <button type="button" class="rounded-md border border-gray-300 bg-white py-2 px-4 text-sm font-medium text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Cancel</button>
+                {% csrf_token %}
+                <a type="button" class="rounded-md border border-gray-300 bg-white py-2 px-4 text-sm font-medium text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2" href="{% url 'user_profile' user.email_prefix %}">Cancel</a>
                 <button type="submit" class="ml-3 inline-flex justify-center rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Save</button>
             </div>
         </div>
     </form>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h1>Editing your profile</h1>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="card">
-                    <div class="card-header">
-                        General Bio
-                    </div>
-                    <div class="card-body">
-                        <form action="{% url 'edit_profile' %}" method="POST" enctype="multipart/form-data">
-                            {% csrf_token %}
-                            <div class="form-group">
-                                {{ form.profile_picture }}
-                            </div>
-                            <div class="form-group">
-                                {{ form.title }}
-                            </div>
-                            <div class="form-group">
-                                {{ form.general_location }}
-                            </div>
-                            <div class="form-group">
-                                {{ form.team }}
-                            </div>
-                            <div class="form-group">
-                                {{ form.short_bio }}
-                            </div>
-                            <button type="submit" class="btn btn-primary">Save</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
 {% endblock content %}
