Added ability to detect if in trial

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -144,7 +144,7 @@
             crossorigin="anonymous"></script>
 
     <!-- 3rd party JavaScript -->
-
+    <script src="https://js.stripe.com/v3/"></script>
     <!-- Project JS -->
     <script src="{% static 'js/base.js' %}"></script>
 
