Added functions to count num users and process invoicing

--- a/templates/billing/cancel.html
+++ b/templates/billing/cancel.html
@@ -13,7 +13,7 @@
 <body>
 <div class="container mt-5">
     <p>You have cancelled the checkout.</p>
-    <p><a href="{% url "subscriptions-home" %}">Return to the dashboard</a></p>
+    <p><a href="{% url "company_home" %}">Return to the dashboard</a></p>
 </div>
 </body>
 </html>
