--- a/templates/billing/success.html
+++ b/templates/billing/success.html
@@ -13,7 +13,7 @@
 <body>
 <div class="container mt-5">
     <p>You have successfully subscribed!</p>
-    <p><a href="{% url "billing_home" %}">Return to the dashboard</a></p>
+    <p><a href="{% url "company_home" %}">Return to the dashboard</a></p>
 </div>
 </body>
 </html>
