Made pricing dynamic

--- a/templates/pages/pricing.html
+++ b/templates/pages/pricing.html
@@ -72,7 +72,7 @@
                         <div class="bg-gray-50 py-8 px-6 text-center lg:flex lg:flex-shrink-0 lg:flex-col lg:justify-center lg:p-12">
                             <p class="text-lg font-medium leading-6 text-gray-900">Per team member, per month</p>
                             <div class="mt-4 flex items-center justify-center text-5xl font-bold tracking-tight text-gray-900">
-                                <span>$1</span>
+                                <span>${{ price|floatformat:2 }}</span>
                                 <span class="ml-3 text-xl font-medium tracking-normal text-gray-500">USD</span>
                             </div>
                             <div class="mt-6">
