--- a/templates/billing/success.html
+++ b/templates/billing/success.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="container mt-5">
-    <p>You have successfully subscribed!</p>
+    <p>You have successfully set up payments!</p>
     <p><a href="{% url "company_home" %}">Return to the dashboard</a></p>
 </div>
 </body>
