Added features and faq to homepage

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -24,16 +24,110 @@
                                     Get started
                                     <span class="text-indigo-200" aria-hidden="true">&rarr;</span>
                                 </a>
-{#                                <a href="#" class="inline-block rounded-lg px-4 py-1.5 text-base font-semibold leading-7 text-gray-900 ring-1 ring-gray-900/10 hover:ring-gray-900/20">#}
-{#                                    Live demo#}
-{#                                    <span class="text-gray-400" aria-hidden="true">&rarr;</span>#}
-{#                                </a>#}
+                                {#                                <a href="#" class="inline-block rounded-lg px-4 py-1.5 text-base font-semibold leading-7 text-gray-900 ring-1 ring-gray-900/10 hover:ring-gray-900/20">#}
+                                {#                                    Live demo#}
+                                {#                                    <span class="text-gray-400" aria-hidden="true">&rarr;</span>#}
+                                {#                                </a>#}
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
+            <div class="bg-white py-24 sm:py-32">
+                <div class="mx-auto max-w-7xl px-6 lg:px-8">
+                    <div class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 sm:gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-3">
+                        <div>
+                            <h2 class="text-lg font-semibold leading-8 tracking-tight text-indigo-600">Everything you need</h2>
+                            <p class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Learn about your team!</p>
+                            <p class="mt-6 text-base leading-7 text-gray-600">Find connections within your organization from similarities and common interests</p>
+                        </div>
+                        <dl class="col-span-2 grid grid-cols-1 gap-x-8 gap-y-10 text-base leading-7 text-gray-600 sm:grid-cols-2 lg:gap-y-16">
+                            <div class="relative pl-9">
+                                <dt class="font-semibold text-gray-900">
+                                    <!-- Heroicon name: mini/check -->
+                                    <svg class="absolute top-1 left-0 h-5 w-5 text-indigo-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                        <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd"/>
+                                    </svg>
+                                    Bio
+                                </dt>
+                                <dd class="mt-2">Discover a small intro and describe your career up until now.</dd>
+                            </div>
+                            <div class="relative pl-9">
+                                <dt class="font-semibold text-gray-900">
+                                    <!-- Heroicon name: mini/check -->
+                                    <svg class="absolute top-1 left-0 h-5 w-5 text-indigo-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                        <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd"/>
+                                    </svg>
+                                    Social Links
+                                </dt>
+                                <dd class="mt-2">Find LinkedIn, Github, and Twitter for team members</dd>
+                            </div>
+                            <div class="relative pl-9">
+                                <dt class="font-semibold text-gray-900">
+                                    <!-- Heroicon name: mini/check -->
+                                    <svg class="absolute top-1 left-0 h-5 w-5 text-indigo-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                        <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd"/>
+                                    </svg>
+                                    Personality Types
+                                </dt>
+                                <dd class="mt-2">Connect with team members that think the same way as you.</dd>
+                            </div>
+                            <div class="relative pl-9">
+                                <dt class="font-semibold text-gray-900">
+                                    <!-- Heroicon name: mini/check -->
+                                    <svg class="absolute top-1 left-0 h-5 w-5 text-indigo-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                        <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd"/>
+                                    </svg>
+                                    Favourites
+                                </dt>
+                                <dd class="mt-2">Match movie, music, and food tastes</dd>
+                            </div>
+                        </dl>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-white">
+                <div class="mx-auto max-w-7xl py-16 px-6 sm:py-24 lg:px-8">
+                    <h2 class="text-2xl font-bold leading-10 tracking-tight text-gray-900">Frequently asked questions</h2>
+                    <p class="mt-6 max-w-2xl text-base leading-7 text-gray-600">Have a different question and can’t find the answer you’re looking for? Reach out to our support team by <a href="mailto:support@team.bio" class="font-semibold text-indigo-600 hover:text-indigo-500">sending us an
+                        email</a> and we’ll get back
+                        to you as soon as we can.</p>
+                    <div class="mt-20">
+                        <dl class="space-y-16 sm:grid sm:grid-cols-2 sm:gap-x-6 sm:gap-y-16 sm:space-y-0 lg:grid-cols-3 lg:gap-x-10">
+                            <div>
+                                <dt class="text-base font-semibold leading-7 text-gray-900">Is there a trial available?</dt>
+                                <dd class="mt-2 text-base leading-7 text-gray-600">Yes, we offer a {{ default_trial_days }} day trial without even needing a credit card.</dd>
+                            </div>
+                            <div>
+                                <dt class="text-base font-semibold leading-7 text-gray-900">How much does Team Bio Cost?</dt>
+                                <dd class="mt-2 text-base leading-7 text-gray-600">Team Bio costs ${{ price|floatformat:2 }} USD per team member per month</dd>
+                            </div>
+                            <div>
+                                <dt class="text-base font-semibold leading-7 text-gray-900">Can I request a feature?</dt>
+                                <dd class="mt-2 text-base leading-7 text-gray-600">You sure can, feel free to send us an email at <a href="mailto:support@team.bio">support@team.bio</a>, or create a ticket in <a href="https://github.com/aaronspindler/Team.Bio/issues/new">Github</a></dd>
+                            </div>
+                            <div>
+                                <dt class="text-base font-semibold leading-7 text-gray-900">How is my data used?</dt>
+                                <dd class="mt-2 text-base leading-7 text-gray-600">Team Bio has protections to help you keep employee data private that need to stay private. Easily set permissions for who can access certain info, while everyone else gets access to info that helps them work better
+                                    together.
+                                </dd>
+                            </div>
+                            <div>
+                                <dt class="text-base font-semibold leading-7 text-gray-900">What are your planned features?</dt>
+                                <dd class="mt-2 text-base leading-7 text-gray-600">We are constantly developing new and exciting features to help you connect with your team. To see what we are working on, check out our <a
+                                        href="https://github.com/aaronspindler/Team.Bio/issues?q=is%3Aopen+is%3Aissue+label%3Aenhancement">planned enhancements.</a>
+                                </dd>
+                            </div>
+                            <div>
+                                <dt class="text-base font-semibold leading-7 text-gray-900">Is something not quite how you would like it?</dt>
+                                <dd class="mt-2 text-base leading-7 text-gray-600">Reach out to our <a href="mailto:support@team.bio">support team</a> or feel free to develop the feature yourself and submit a pull request on <a href="https://github.com/aaronspindler/Team.Bio">Github</a>
+                                </dd>
+                            </div>
+                        </dl>
+                    </div>
+                </div>
+            </div>
+
         </main>
     </div>
 {% endblock content %}
